syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service Benchmark {
    rpc GetInt (Request) returns (Int) {
        option (google.api.http) = {
            get: "/int"
        };
    }
    rpc GetIntSlice (Request) returns (IntSlice) {
        option (google.api.http) = {
            get: "/int-slice"
        };
    }
    rpc GetString (Request) returns (String) {
        option (google.api.http) = {
            get: "/string"
        };
    }
    rpc GetStringSlice (Request) returns (StringSlice) {
        option (google.api.http) = {
            get: "/string-slice"
        };
    }
    rpc GetBlob (Request) returns (Blob) {
        option (google.api.http) = {
            get: "/blob"
        };
    }
    rpc GetStruct (Request) returns (Struct) {
        option (google.api.http) = {
            get: "/struct"
        };
    }
    rpc GetStructSlices (Request) returns (StructSlices) {
        option (google.api.http) = {
            get: "/struct-slices"
        };
    }
    rpc GetStructStructs (Request) returns (StructStructs) {
        option (google.api.http) = {
            get: "/struct-structs"
        };
    }
    rpc GetIntStream (Request) returns (stream Int) {
        option (google.api.http) = {
            get: "/int-stream"
        };
    }
}

message Request {}

message Int {
    int32 value = 1;
}

message IntSlice {
    repeated int32 value = 1;
}

message String {
    string value = 1;
}

message StringSlice {
    repeated string value = 1;
}

message Blob {
    bytes value = 1;
}

message Struct {
    int32 value1 = 1;
    int32 value2 = 2;
    int32 value3 = 3;
    int32 value4 = 4;
    int32 value5 = 5;
    int32 value6 = 6;
    int32 value7 = 7;
    int32 value8 = 8;
    int32 value9 = 9;
    int32 value10 = 10;
    int32 value11 = 11;
    int32 value12 = 12;
    int32 value13 = 13;
    int32 value14 = 14;
    int32 value15 = 15;
    int32 value16 = 16;
    int32 value17 = 17;
    int32 value18 = 18;
    int32 value19 = 19;
    int32 value20 = 20;
    int32 value21 = 21;
    int32 value22 = 22;
    int32 value23 = 23;
    int32 value24 = 24;
    int32 value25 = 25;
    int32 value26 = 26;
    int32 value27 = 27;
    int32 value28 = 28;
    int32 value29 = 29;
    int32 value30 = 30;
    int32 value31 = 31;
    int32 value32 = 32;
    int32 value33 = 33;
    int32 value34 = 34;
    int32 value35 = 35;
    int32 value36 = 36;
    int32 value37 = 37;
    int32 value38 = 38;
    int32 value39 = 39;
    int32 value40 = 40;
    int32 value41 = 41;
    int32 value42 = 42;
    int32 value43 = 43;
    int32 value44 = 44;
    int32 value45 = 45;
    int32 value46 = 46;
    int32 value47 = 47;
    int32 value48 = 48;
    int32 value49 = 49;
    int32 value50 = 50;
    int32 value51 = 51;
    int32 value52 = 52;
    int32 value53 = 53;
    int32 value54 = 54;
    int32 value55 = 55;
    int32 value56 = 56;
    int32 value57 = 57;
    int32 value58 = 58;
    int32 value59 = 59;
    int32 value60 = 60;
    int32 value61 = 61;
    int32 value62 = 62;
    int32 value63 = 63;
    int32 value64 = 64;
    int32 value65 = 65;
    int32 value66 = 66;
    int32 value67 = 67;
    int32 value68 = 68;
    int32 value69 = 69;
    int32 value70 = 70;
    int32 value71 = 71;
    int32 value72 = 72;
    int32 value73 = 73;
    int32 value74 = 74;
    int32 value75 = 75;
    int32 value76 = 76;
    int32 value77 = 77;
    int32 value78 = 78;
    int32 value79 = 79;
    int32 value80 = 80;
    int32 value81 = 81;
    int32 value82 = 82;
    int32 value83 = 83;
    int32 value84 = 84;
    int32 value85 = 85;
    int32 value86 = 86;
    int32 value87 = 87;
    int32 value88 = 88;
    int32 value89 = 89;
    int32 value90 = 90;
    int32 value91 = 91;
    int32 value92 = 92;
    int32 value93 = 93;
    int32 value94 = 94;
    int32 value95 = 95;
    int32 value96 = 96;
    int32 value97 = 97;
    int32 value98 = 98;
    int32 value99 = 99;
    int32 value100 = 100;
}

message StructSlices {
    IntSlice value1 = 1;
    IntSlice value2 = 2;
    IntSlice value3 = 3;
    IntSlice value4 = 4;
    IntSlice value5 = 5;
    IntSlice value6 = 6;
    IntSlice value7 = 7;
    IntSlice value8 = 8;
    IntSlice value9 = 9;
    IntSlice value10 = 10;
    IntSlice value11 = 11;
    IntSlice value12 = 12;
    IntSlice value13 = 13;
    IntSlice value14 = 14;
    IntSlice value15 = 15;
    IntSlice value16 = 16;
    IntSlice value17 = 17;
    IntSlice value18 = 18;
    IntSlice value19 = 19;
    IntSlice value20 = 20;
    IntSlice value21 = 21;
    IntSlice value22 = 22;
    IntSlice value23 = 23;
    IntSlice value24 = 24;
    IntSlice value25 = 25;
    IntSlice value26 = 26;
    IntSlice value27 = 27;
    IntSlice value28 = 28;
    IntSlice value29 = 29;
    IntSlice value30 = 30;
    IntSlice value31 = 31;
    IntSlice value32 = 32;
    IntSlice value33 = 33;
    IntSlice value34 = 34;
    IntSlice value35 = 35;
    IntSlice value36 = 36;
    IntSlice value37 = 37;
    IntSlice value38 = 38;
    IntSlice value39 = 39;
    IntSlice value40 = 40;
    IntSlice value41 = 41;
    IntSlice value42 = 42;
    IntSlice value43 = 43;
    IntSlice value44 = 44;
    IntSlice value45 = 45;
    IntSlice value46 = 46;
    IntSlice value47 = 47;
    IntSlice value48 = 48;
    IntSlice value49 = 49;
    IntSlice value50 = 50;
    IntSlice value51 = 51;
    IntSlice value52 = 52;
    IntSlice value53 = 53;
    IntSlice value54 = 54;
    IntSlice value55 = 55;
    IntSlice value56 = 56;
    IntSlice value57 = 57;
    IntSlice value58 = 58;
    IntSlice value59 = 59;
    IntSlice value60 = 60;
    IntSlice value61 = 61;
    IntSlice value62 = 62;
    IntSlice value63 = 63;
    IntSlice value64 = 64;
    IntSlice value65 = 65;
    IntSlice value66 = 66;
    IntSlice value67 = 67;
    IntSlice value68 = 68;
    IntSlice value69 = 69;
    IntSlice value70 = 70;
    IntSlice value71 = 71;
    IntSlice value72 = 72;
    IntSlice value73 = 73;
    IntSlice value74 = 74;
    IntSlice value75 = 75;
    IntSlice value76 = 76;
    IntSlice value77 = 77;
    IntSlice value78 = 78;
    IntSlice value79 = 79;
    IntSlice value80 = 80;
    IntSlice value81 = 81;
    IntSlice value82 = 82;
    IntSlice value83 = 83;
    IntSlice value84 = 84;
    IntSlice value85 = 85;
    IntSlice value86 = 86;
    IntSlice value87 = 87;
    IntSlice value88 = 88;
    IntSlice value89 = 89;
    IntSlice value90 = 90;
    IntSlice value91 = 91;
    IntSlice value92 = 92;
    IntSlice value93 = 93;
    IntSlice value94 = 94;
    IntSlice value95 = 95;
    IntSlice value96 = 96;
    IntSlice value97 = 97;
    IntSlice value98 = 98;
    IntSlice value99 = 99;
    IntSlice value100 = 100;
}

message StructStructs {
    Struct value1 = 1;
    Struct value2 = 2;
    Struct value3 = 3;
    Struct value4 = 4;
    Struct value5 = 5;
    Struct value6 = 6;
    Struct value7 = 7;
    Struct value8 = 8;
    Struct value9 = 9;
    Struct value10 = 10;
    Struct value11 = 11;
    Struct value12 = 12;
    Struct value13 = 13;
    Struct value14 = 14;
    Struct value15 = 15;
    Struct value16 = 16;
    Struct value17 = 17;
    Struct value18 = 18;
    Struct value19 = 19;
    Struct value20 = 20;
    Struct value21 = 21;
    Struct value22 = 22;
    Struct value23 = 23;
    Struct value24 = 24;
    Struct value25 = 25;
    Struct value26 = 26;
    Struct value27 = 27;
    Struct value28 = 28;
    Struct value29 = 29;
    Struct value30 = 30;
    Struct value31 = 31;
    Struct value32 = 32;
    Struct value33 = 33;
    Struct value34 = 34;
    Struct value35 = 35;
    Struct value36 = 36;
    Struct value37 = 37;
    Struct value38 = 38;
    Struct value39 = 39;
    Struct value40 = 40;
    Struct value41 = 41;
    Struct value42 = 42;
    Struct value43 = 43;
    Struct value44 = 44;
    Struct value45 = 45;
    Struct value46 = 46;
    Struct value47 = 47;
    Struct value48 = 48;
    Struct value49 = 49;
    Struct value50 = 50;
    Struct value51 = 51;
    Struct value52 = 52;
    Struct value53 = 53;
    Struct value54 = 54;
    Struct value55 = 55;
    Struct value56 = 56;
    Struct value57 = 57;
    Struct value58 = 58;
    Struct value59 = 59;
    Struct value60 = 60;
    Struct value61 = 61;
    Struct value62 = 62;
    Struct value63 = 63;
    Struct value64 = 64;
    Struct value65 = 65;
    Struct value66 = 66;
    Struct value67 = 67;
    Struct value68 = 68;
    Struct value69 = 69;
    Struct value70 = 70;
    Struct value71 = 71;
    Struct value72 = 72;
    Struct value73 = 73;
    Struct value74 = 74;
    Struct value75 = 75;
    Struct value76 = 76;
    Struct value77 = 77;
    Struct value78 = 78;
    Struct value79 = 79;
    Struct value80 = 80;
    Struct value81 = 81;
    Struct value82 = 82;
    Struct value83 = 83;
    Struct value84 = 84;
    Struct value85 = 85;
    Struct value86 = 86;
    Struct value87 = 87;
    Struct value88 = 88;
    Struct value89 = 89;
    Struct value90 = 90;
    Struct value91 = 91;
    Struct value92 = 92;
    Struct value93 = 93;
    Struct value94 = 94;
    Struct value95 = 95;
    Struct value96 = 96;
    Struct value97 = 97;
    Struct value98 = 98;
    Struct value99 = 99;
    Struct value100 = 100;
}